--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
       - npm run build:prod
       # Use AWS SAM to package the application by using AWS CloudFormation
       - aws s3 cp --recursive dist/nexttrip/ s3://$WEBSITE_S3_BUCKET/public/ --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
-      - sed -i -e "s|assets/|$WEBSITE_S3_PREFIX/public/assets/|g" public/index.html
+      - sed -i -e "s|assets/|$WEBSITE_S3_PREFIX/public/assets/|g" dist/nexttrip/index.html
       - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template template-export.yml
 
 artifacts:
