@trivial - addin echos

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   install:
     commands:
       # Install dependencies needed for running tests
+      - echo Installing source NPM dependencies...
       - npm install
 
       # Upgrade AWS CLI to the latest version
@@ -15,7 +16,11 @@ phases:
       ## - npm run e2e
   build:
     commands:
+      - echo Build started on `date`
       - npm run build:prod
+  post_build:
+    commands:
+      - echo Copying started on `date`
       # Use AWS SAM to package the application by using AWS CloudFormation
       - aws s3 cp --recursive dist/nexttrip/ s3://$WEBSITE_S3_BUCKET/public/ --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
       - sed -i -e "s|assets/|$WEBSITE_S3_PREFIX/public/assets/|g" dist/nexttrip/index.html
