--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
     commands:
       # Clear S3 bucket.
       - echo Clearing S3 bucket
-      - aws s3 rm s3://$WEBSITE_S3_BUCKET/public/ --recursive
+      ##- aws s3 rm s3://$WEBSITE_S3_BUCKET/public/ --recursive
       - echo S3 bucket is cleared.
       - echo Copying started on `date`
       # Use AWS SAM to package the application by using AWS CloudFormation
