--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,9 +21,9 @@ phases:
   post_build:
     commands:
       # Clear S3 bucket.
-      - echo Clearing S3 bucket
-      - aws s3 rm s3://$S3_BUCKET/public/ --recursive
-      - echo S3 bucket is cleared.
+      ## - echo Clearing S3 bucket
+      ## - aws s3 rm s3://$S3_BUCKET/public/ --recursive
+      ## - echo S3 bucket is cleared.
       - echo Copying started on `date`
       # Use AWS SAM to package the application by using AWS CloudFormation
       - aws s3 cp --recursive dist/nexttrip/ s3://$WEBSITE_S3_BUCKET/public/ --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
